--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,284 @@ nav .li-tag:hover::after{
 }
 
 /* ----------------Section-1---------------- */
+
+.section-1{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border:2px solid red; */
+
+}
+/* -------Img-DIV--------------------- */
+.section-1 .img-div{
+    width: 58%;
+    height: 37.5rem ;
+    /* border: 2px solid blue; */
+    background-image:linear-gradient(rgba(131, 129, 129, 0.6), rgba(0, 0, 0, 0.6)),url(../images/div-img.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 11rem 6.1rem 11rem 8.7rem;}
+
+.section-1 .text-div{
+    color: #ffffff;
+}
+
+.text-div :nth-child(1){
+    font-size: 1.7rem;
+    margin-bottom: 2.2rem;
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+    cursor: pointer;
+    
+}
+.text-div :nth-child(1)::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s ease-in;
+
+}
+
+.text-div :nth-child(1):hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+
+
+.text-div :nth-child(2){
+    width: 100%;
+    height: 1px;
+    background-color: #ffffff;
+}  
+
+.text-div :nth-child(3){
+    margin-top: 2.1rem;
+    font-size: 1.7rem;
+    margin-bottom: 10px;
+    font-weight: bold;
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+
+}
+
+.text-div :nth-child(3)::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
+    z-index: -1;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: transform 0.5s ease-in;
+}
+
+.text-div :nth-child(3):hover::before{
+    transform: scaleY(1);
+    transform-origin: top;
+}
+
+
+.text-div :nth-child(4){
+    font-size: 1.2rem ;
+    margin-bottom: 2rem ;
+}
+
+.text-div :nth-child(5){
+    padding: 0.8rem 2.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 0.3rem;
+    
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+
+    border: none;
+    color: #ffffff;
+    position: relative;
+    z-index: 1;
+}
+
+
+.text-div :nth-child(5)::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient( 135deg, #e943ff 10%, #9708CC 100%);
+    transform: scale(0);
+    
+    z-index: -1;
+    transition: transform 0.5s ease-in;
+}
+
+.text-div :nth-child(5):hover::before{
+    transform: scale(1);
+    border-radius:  0.3rem;
+
+}
+/* ----------- content - More News------------- */
+.more-news-box{
+    /* border: 2px solid rebeccapurple; */
+    width: 42%;
+    height: 37.5rem ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 90px 79px 90px 90px;
+    
+   
+    
+
+}
+
+.more-news-mainText{
+    color: #202124;
+    font-weight: bold;
+    font-size:1.6rem ;
+}
+
+
+
+.more-news-line{
+    width: 100%;
+    height: 2px;
+    background-color: #ebeded;
+  
+    
+
+}
+
+.info-boxes{
+    /* border: 2px solid salmon; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap:39px;
+}
+
+.info-box{
+    /* border: 2px solid royalblue; */
+    height:140px; 
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.info-box::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    bottom: -5px;
+    
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s ease-in;    
+}
+
+.info-box:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
+
+}
+
+.info-box::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    top: -5px;
+    
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s ease-in;    
+}
+
+.info-box:hover::after{
+    transform: scaleX(1);
+    transform-origin: right;}
+
+
+
+
+
+
+
+
+
+.info-box :nth-child(1){
+    color: #fa6980;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom:  20px;
+}
+.info-box :nth-child(2){
+    font-size: 1.2rem;
+    color: #202124;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+
+.info-box :nth-child(3){
+    font-size: 1rem;
+    line-height: 20px;
+    margin-bottom: 5px;
+    color: #a6adb4;
+    transition: color 0.3s ease-in;
+}
+
+.info-box :nth-child(3):hover{
+    color: #000000;
+    
+}
+
+.info-box :nth-child(4){
+    font-size:0.7rem ;
+    color: #a6adb4;
+    transition: color 0.3s ease-in;
+}
+
+.info-box :nth-child(4):hover{
+    color: #000000;}
+
+
+    
+
+
+    
+
+
+
