--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 
 /*--------------- main-container---------------- */
-.main-contaienr{
+.main-container{
     max-width: 1440px;
     width: 100%;
+    background: #f6f8f9;
+    margin: 0 auto;
 }
 /* ----------------Header---------------------- */
 header{
@@ -156,6 +158,7 @@ nav .li-tag:hover::after{
     justify-content: space-between;
     align-items: center;
     /* border:2px solid red; */
+    background-color: #ffffff;
 
 }
 /* -------Img-DIV--------------------- */
@@ -423,6 +426,117 @@ nav .li-tag:hover::after{
     color: #000000;}
 
 
+
+
+
+
+/* --------------Section-2 ----------------------- */
+
+.section-2{
+    width: 80%;
+    /* border: 2px solid royalblue; */
+    margin:40px auto;
+}
+.section-2 h2{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color:#202124 ;
+}
+
+.article-1{
+    /* border: 2px solid rebeccapurple; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px ;
+}
+
+
+
+.card{
+    /* border: 2px solid red; */
+    width: 31%;
+    height: 350px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px 2px hsl(0deg 0% 61%);
+    
+}
+
+.slider-wrap{
+    position: relative;
+    max-width: 360px;
+    height: 180px;
+     margin-bottom: 40px;
+}
+
+.slider{
+    display: flex;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 27px 50px -11px hsla(0, 0%, 0%, 0.25);
+    border-radius: 10px;
+   
+}
+
+.slider img{
+    flex: 1 0 100%;
+    width: 360px;
+    height: 180px;
+    /* scroll-snap-align: start; */
+    object-fit: cover;
+    object-position: center;
+    transition: transform 4s linear;
+    cursor: pointer;
+   
+}
+
+.slider img:hover{
+    transform: scale(1.2);
+}
+
+
+
+
+
+.slide-nav{
+    display: flex;
+    column-gap: 16px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    
+}
+
+.slide-nav a{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: rgb(250, 250, 250);
+    opacity: 0.75;
+    transition: opacity ease 250ms;}
+
+    .slide-nav a:hover{
+        opacity: 1;
+    }
+
+
+.card h3{
+    font-size: 1rem;
+    font-weight: bold;
+    color:#202124 ;
+    margin:0 40px;
+}
+
+.card p{
+    font-size: 0.8rem;
+    color: #a6adb4;
+    width: 80%;
+    margin: 9px 39px 66px 40px;
+}
     
 
 
