--- a/css/style.css
+++ b/css/style.css
@@ -537,10 +537,230 @@ nav .li-tag:hover::after{
     width: 80%;
     margin: 9px 39px 66px 40px;
 }
+
+
+
+
+
+/*---------Section-3 ------------------------ */
+    .section-3{
+        width: 80%;
+        /* border: 2px solid blue; */
+        margin: 0 auto;
+       
+        
+    }
+
+    .section-3-headline{
+        color: #202124;
+        font-weight: bold;
+        font-size: 1.5rem;
+        margin-bottom: 40px;
+    }
+
+    .section-3-mainContent{
+        width: 100%;
+        /* border: 2px solid rgb(229, 255, 0); */
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+
+
+
+/* ---section-3 left content---- */
+   .happening-now-left{
+    width: 60%;
+    /* border:2px solid red; */
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
     
-
-
     
+   } 
 
+   .article-img{
+    width: 100%;
+    height: 430px ;
+    /* border:2px solid rebeccapurple; */
+    background-image:url(../images/bridge.png);
+    background-position: center;
+    background-size: cover;
+    padding: 40px 40px 66px;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+    transition: ;
+    cursor: pointer;
+ }
+
+ 
+
+ .article-img::before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    background-image:url(../images/bridge.png);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    filter: blur(2px);
+    opacity: 0;
+    transition: opacity 0.4s ease-in;
+ }
+
+ .article-img:hover::before{
+    opacity: 1;
+
+ }
+ .article-img:nth-child(2){
+    background-image: url(../images/forest.png);
+   }
+
+   .article-img:nth-child(2):before{
+    content: '';
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    background-image:url(../images/forest.png);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    filter: blur(2px);
+    opacity: 0;
+    transition: opacity 0.4s ease-in;
+ }
+
+ .article-img:nth-child(2):hover::before{
+    opacity: 1;
+
+ }
+
+
+ 
+
+   .article-img h3{
+    margin-bottom: 232px ;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+
+   }
+
+   .article-img h2{
+    font-size: 1.5rem;
+    color: #ffffff;
+    font-weight: bold;
+    margin-bottom: 10px;
+    position: relative;
+   }
+
+   .article-img h2::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+    height: 300%;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
+    z-index: -1;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: transform 0.3s ease-in;
+   }
+
+   .article-img h2:hover::before{
+    transform: scaleY(1);
+    transform-origin: top;
+   }
+
+   .article-img p{
+    font-size: 1rem;
+    color: #ffffff;
+   }
+
+
+
+
+
+  
+ 
+   
+   
+
+   /* ---section-3 right content---- */
+ 
+   .happening-now-right{
+    width:32%;
+    /* border:2px solid rgb(9, 255, 0); */
+    
+    
+   } 
+
+.figure-title{
+    font-size: 1rem;
+    color: #202124;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    font-weight: bold;
+}
+
+
+figure{
+   position: relative;
+   cursor: pointer;
+}
+
+figure::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 100%;
+    height: 3px;
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+    transform: scale(0);
+    transform-origin: right; 
+    transition: transform 0.4s ease-in;
+}
+
+figure:hover::before{
+    transform: scale(1);
+    transform-origin: right;
+    
+}
+
+figure::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -10px;
+    width: 100%;
+    height: 3px;
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+    transform: scale(0);
+    transform-origin: left; 
+    transition: transform 0.4s ease-in;
+}
+
+figure:hover::after{
+    transform: scale(1);
+    transform-origin: left;
+}
+
+
+   
 
 
