--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,24 @@
     width: 100%;
     background: #f6f8f9;
     margin: 0 auto;
+    position: relative;
 }
 /* ----------------Header---------------------- */
 header{
     padding: 30px 50px;
+    max-width: 1440px;
     width: 100%;
     height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #f6f8f9;
+    background: #f0f0f1;
+    /* border: 2px solid rebeccapurple; */
+    position: fixed;
+    left:50%;
+    transform: translateX(-50%);
+    top:0;
+    z-index: 3;
     
     
 
@@ -107,6 +115,10 @@ nav .li-tag{
     font-size: 1rem;
     cursor: pointer;
     position: relative;
+}
+
+nav .li-tag:nth-child(1){
+    font-weight: bold;
 }
 
 
@@ -536,6 +548,13 @@ nav .li-tag:hover::after{
     color: #a6adb4;
     width: 80%;
     margin: 9px 39px 66px 40px;
+    transition: transform 0.5s, color 0.5s  ease-in;
+    cursor: pointer;
+}
+
+.card p:hover{
+    transform: scale(1.1);
+    color: #000000;
 }
 
 
@@ -761,6 +780,158 @@ figure:hover::after{
 }
 
 
+
+
+/* ---------------Footer------------------- */
+
+footer{
+    margin-top: 100px;
+    width: 100%;
+    background-color: #a6adb4;
+    padding:60px  140px 60px 145px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+}
+
+/* logo */
+.logo{
+    display: flex;
+    transform-style: preserve-3d;
+    gap:15px;
+    transform: rotateY(25deg) rotateX(1deg);
+    
+    
+
+
+}
+
+.logo .text{
+    position: relative;
+    width: 20px ;
+    height: 20px;
+    transform-style: preserve-3d;
+    transition: 2.5s ease-in-out;
+    
+}
+
+.logo:hover .text{
+    transform:rotateX(720deg)
+}
+
+
+.logo:hover .text:last-child{
+    transform:rotateX(-720deg)
+}
+
+.logo:hover .text:first-child{
+    transform:rotateX(-360deg)
+}
+.logo:hover .text:nth-child(2){
+    transform:rotateX(360deg)
+}
+
+.logo .text::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient( 135deg, #222425 10%, #b05df3 100%);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transform-origin: left;
+    transform:rotateY(90deg) translateX(-9px);
+    border-radius: 5px;
+
+    
+}
+
+
+
+.logo .text span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffff  ;
+    transform-style: preserve-3d;
+    transform: rotateX(calc(91deg * var(--i))) translateZ(9px);
+    border-radius: 5px;
+
+}
+
+
+
+
+/* footer-nav */
+
+
+.footer-nav{
+    width: 27%;
+    /* border: 2px solid rebeccapurple; */
+    display: flex;
+    
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+.nav-section{
+    color: 0.9rem ;
+    color: #cbd0d3;
+    line-height: 20px;
+
+}
+.nav-section p{
+    cursor: pointer;
+    transition: transform  0.2s ease-in;
+}
+
+.nav-section p:hover{
+    color: #ffffff;
+    transform: scale(1.1);
+}
+
+
+.icons{
+    display: flex;
+    justify-content: space-between;
+   
+    color: #ffffff;
+    gap: 2rem;
+    margin-left: 500px;
+    
+}
+
+.icons :nth-child(1){
+    transition: 0.2s ease-in;
+    cursor: pointer;
+    
+}
+
+.icons :nth-child(1):hover{
+    color: #EA5455;
+    transform: scale(1.5);
+    
+}
+
+.blue-icons{
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+.blue-icons:hover{
+    color: #0e70e0;
+    transform: scale(1.5);}
    
 
 
