--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -373,9 +373,233 @@ nav .li-tag:hover::after{
     
 }
     
+/* -----------Section-3--------------- */
+
+.section-3{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin:0 auto ;
 
 
 
+}
+
+.main-photo{
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    margin-bottom: 80px;
+}
+
+.section-3 p{
+    line-height: 23px;
+    font-size: 0.9rem;
+    color: #a6adb4;
+    transition: color 0.3s ease-in;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.section-3 p:hover{
+    color: #ffffff;
+    
+}
+
+.section-3 p::before{
+    content: '';
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: -50%;
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
+    z-index: -1;
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: transform 0.4s ease-in;
+    
+
+}
+
+.section-3 p:hover::before{
+    transform: scaleY(1);
+    transform-origin: top;
+}
+
+.section-3 p::after{
+    content: '';
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: -50%;
+    background-image: linear-gradient(rgba(150, 150, 150, 0.6),rgba(57, 57, 58, 0.6));
+    z-index: -1;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.4s ease-in;
+
+}
+.section-3 p:hover::after{
+    transform: scaleY(1);
+    transform-origin: bottom;
+}
+
+
+
+
+
+
+/* ----------------Footer------------------- */
+footer{
+    margin-top: 160px;
+    width: 100%;
+    background-color: #a6adb4;
+    padding:60px  140px 60px 145px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+}
+
+/* logo */
+.logo-2{
+    display: flex;
+    transform-style: preserve-3d;
+    gap:15px;
+    transform: rotateY(25deg) rotateX(1deg);
+    
+    
+
+
+}
+
+.logo-2 .text{
+    position: relative;
+    width: 20px ;
+    height: 20px;
+    transform-style: preserve-3d;
+    transition: 2.5s ease-in-out;
+    
+}
+
+.logo-2:hover .text{
+    transform:rotateX(720deg)
+}
+
+
+.logo-2:hover .text:last-child{
+    transform:rotateX(-720deg)
+}
+
+.logo-2:hover .text:first-child{
+    transform:rotateX(-360deg)
+}
+.logo-2:hover .text:nth-child(2){
+    transform:rotateX(360deg)
+}
+
+.logo-2 .text::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient( 135deg, #222425 10%, #b05df3 100%);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    transform-origin: left;
+    transform:rotateY(90deg) translateX(-9px);
+    border-radius: 5px;
+
+    
+}
+
+
+
+.logo-2 .text span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffff  ;
+    transform-style: preserve-3d;
+    transform: rotateX(calc(91deg * var(--i))) translateZ(9px);
+    border-radius: 5px;
+
+}
+
+
+
+
+/* footer-nav */
+
+
+.footer-nav{
+    width: 27%;
+    /* border: 2px solid rebeccapurple; */
+    display: flex;
+    
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+.nav-section{
+    color: 0.9rem ;
+    color: #cbd0d3;
+    line-height: 20px;
+
+}
+.nav-section p{
+    cursor: pointer;
+    transition: transform  0.2s ease-in;
+}
+
+.nav-section p:hover{
+    color: #ffffff;
+    transform: scale(1.1);
+}
+
+
+.icons{
+    display: flex;
+    justify-content: space-between;
+   
+    color: #ffffff;
+    gap: 2rem;
+    margin-left: 500px;
+    
+}
+
+.icons :nth-child(1){
+    transition: 0.2s ease-in;
+    cursor: pointer;
+    
+}
+
+.icons :nth-child(1):hover{
+    color: #EA5455;
+    transform: scale(1.5);
+    
+}
+
+.blue-icons{
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+.blue-icons:hover{
+    color: #0e70e0;
+    transform: scale(1.5);}
+   
 
 
         
